--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <option value="bird">🐦 小鸟</option>
                         <option value="fish">🐠 小鱼</option>
                         <option value="butterfly">🦋 蝴蝶</option>
+                        <option value="cockroach">🪳 蟑螂</option>
                     </select>
                     <button id="toggleBtn" class="btn">开始专注模式</button>
                 </div>
