feature:添加李泽健

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <option value="fish">🐠 小鱼</option>
                         <option value="butterfly">🦋 蝴蝶</option>
                         <option value="cockroach">🪳 蟑螂</option>
+                        <option value="graduate">🎓 导师</option>
                     </select>
                     <button id="toggleBtn" class="btn">开始专注模式</button>
                 </div>
