--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <input type="file" id="pdfInput" accept=".pdf" style="display: none;">
                 <button id="uploadBtn" class="btn">上传PDF</button>
                 <div class="settings">
-                    <label for="interval">提醒间隔(秒):</label>
-                    <input type="number" id="interval" value="30" min="10" max="300">
+                    <label for="interval">角色提醒间隔(秒):</label>
+                    <input type="number" id="interval" value="120" min="10" max="600">
                     <label for="character">选择角色:</label>
                     <select id="character">
                         <option value="bug">🐛 小虫子</option>
